--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       }
 
       //ws = new WebSocket('ws://localhost:6969');
-      ws = new WebSocket('https://site--roshambo--76lmn2kbf8hd.code.run/');
+      ws = new WebSocket('site--roshambo--76lmn2kbf8hd.code.run');
       ws.onopen = () => {
         console.log('Connection opened!');
       }
